--- a/_config.yml
+++ b/_config.yml
@@ -8,13 +8,13 @@ pygments: true
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : Jekyll Bootstrap
-tagline: Site Tagline
+title : n0n link-blog
+tagline: очередной линкоблог
 author :
-  name : Name Lastname
-  email : blah@email.test
-  github : username
-  twitter : username
+  name : Сегргей Голубенко
+  email : n0n.rus@gmail.com
+  github : n0n
+  twitter : mobimen
   feedburner : feedname
 
 # The production_url is only used when full-domain names are needed
@@ -25,7 +25,7 @@ author :
 # Else if you are pushing to username.github.io, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
-production_url : http://username.github.io
+production_url : http://n0n.github.io
 
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
